Major improvements to randomized search